--- a/config/config.json
+++ b/config/config.json
@@ -1,18 +1,17 @@
 {
-"map_file":"map-10-10.txt",
+"map_file":"map-7-8.txt",
 "discount_factor":0.95,
-"step_size":0.24,
+"step_size":0.2,
 "ucb_coefficient":5.0,
-"good_rock_reward":10000000.0,
+"good_rock_reward":100.0,
 "bad_rock_penalty":10.0,
 "exit_reward":10.0,
 "illegal_move_penalty":100.0,
-"half_efficiency_distance":20.0,
-"preferred_action":"SAMPLE",
-"finishing_empty_handed":100,
-"step_timeout":1000,
+"half_efficiency_distance":4.0,
+"preferred_action":"None",
+"finishing_empty_handed":100.0,
 "min_particle_count":100,
-"num_episodes":1000,
+"num_episodes":10,
 "maximum_depth":100,
-"algorithm":"UCB"
+"algorithm":"TD"
 }
