--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,22 @@
 {
-"map_file":"map-10-10.txt",
+"map_file":"map-12-12.txt",
 "discount_factor":0.95,
-"step_size":0.2,
+"step_size":0.1,
 "ucb_coefficient":5.0,
 "good_rock_reward":10.0,
 "bad_rock_penalty":10.0,
 "exit_reward":10.0,
 "illegal_move_penalty":100.0,
-"half_efficiency_distance":10.0,
-"preferred_action":"None",
-"finishing_empty_handed":100.0,
+"checking_penalty":-0.0,
+"epsilon":0.05,
+"max_nn_distance":0.0,
+"max_n_comparisons":1000.0,
+"half_efficiency_distance":5.0,
+"preferred_action":"NONE",
+"non-transferable-action":4,
+"finishing_empty_handed":50.0,
 "min_particle_count":100,
-"num_episodes":20,
+"num_episodes":100,
 "maximum_depth":100,
-"algorithm":"TD"
+"algorithm":"UCB"
 }
