--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: python
 python:
   - "2.7"
+
 # command to run tests
-script: py.test test/unit_tests.py
+install:
+  - "pip install -r requirements.txt"
+  - python setup.py install
+script:
+  - py.test test/unit_tests.py
+
