--- a/config/system-config.json
+++ b/config/system-config.json
@@ -1,15 +1,16 @@
 {
 "policy_representation":"tree",
 "discount":0.995,
-"step_size":0.995,
+"step_size":0.05,
 "ucb_coefficient":10.0,
 "delta_epsilon_k":0.5,
 "min_particle_count":500,
 "max_particle_count":1000,
-"num_steps":500,
+"num_steps":1000,
 "num_sims":100,
-"num_runs":3,
-"num_start_states":500,
+"num_runs":1,
+"num_start_states":1000,
 "maximum_depth":100,
-"time_out":3600
+"max_time_out":3600,
+"action_selection_time_out":1
 }
