MISC: Removed unused code, cleaned up output
* Cleaned up unused code and output displayed to the console
* Worked on plot generation
* Moved some utility modules into a `util` module`

--- a/config/system-config.json
+++ b/config/system-config.json
@@ -1,16 +1,16 @@
 {
 "policy_representation":"tree",
-"discount":0.995,
-"step_size":0.05,
-"ucb_coefficient":10.0,
-"delta_epsilon_k":0.5,
-"min_particle_count":500,
+"discount":0.95,
+"step_size":0.5,
+"ucb_coefficient":3.0,
+"min_particle_count":1000,
 "max_particle_count":1000,
 "num_steps":1000,
-"num_sims":100,
-"num_runs":1,
+"num_sims":1000,
+"num_runs":1000,
 "num_start_states":1000,
 "maximum_depth":100,
-"max_time_out":3600,
-"action_selection_time_out":1
+"max_time_out":43200,
+"action_selection_time_out":60,
+"preferred_actions":"True"
 }
