--- a/config/rockproblem-config.json
+++ b/config/rockproblem-config.json
@@ -1,10 +1,8 @@
 {
-"map_file":"map-15-15.txt",
+"map_file":"map-7-8.txt",
 "good_rock_reward":10.0,
 "bad_rock_penalty":10.0,
 "exit_reward":10.0,
 "illegal_move_penalty":100.0,
-"checking_penalty":0,
-"half_efficiency_distance":20.0,
-"finishing_empty_handed":0.0
+"half_efficiency_distance":20.0
 }
