--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,29 @@ language: python
 python:
   - "2.7"
 
-# command to run tests
 install:
-  - "pip install -r requirements.txt"
-  - python setup.py install
-script:
-  - py.test test/unit_tests.py
+  - sudo apt-get update
+  # We do this conditionally because it saves us some downloading if the
+  # version is the same.
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+    fi
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  # Useful for debugging any issues with conda
+  - conda info -a
 
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION numpy matplotlib scipy
+  - source activate test-environment
+  - python setup.py install
+
+script:
+  - chmod +x ./test/run_sarsa.sh
+  - chmod +x ./test/run_pomcp.sh
+  - ./test/run_sarsa.sh
+  - ./test/run_pomcp.sh
